Chapter25/list_error
faster_all_pairs_shortest_path.c: In function ‘extend_short_path’:
faster_all_pairs_shortest_path.c:17:26: error: ‘INT_MAX’ undeclared (first use in this function)
             vertex[i][j]=INT_MAX;
                          ^~~~~~~
faster_all_pairs_shortest_path.c:17:26: note: each undeclared identifier is reported only once for each function it appears in
faster_all_pairs_shortest_path.c:26:51: error: ‘vertex_befor’ undeclared (first use in this function)
                 vertex[i][j]=min_num(vertex[i][j],vertex_befor[i][k]+vertex_adj[k][j]);
                                                   ^~~~~~~~~~~~
faster_all_pairs_shortest_path.c: In function ‘faster_all_pairs_shortest_path’:
faster_all_pairs_shortest_path.c:36:14: warning: implicit declaration of function ‘dynamic_malloc_array’ [-Wimplicit-function-declaration]
     vertex_a=dynamic_malloc_array(n,n);
              ^~~~~~~~~~~~~~~~~~~~
faster_all_pairs_shortest_path.c:36:13: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     vertex_a=dynamic_malloc_array(n,n);
             ^
faster_all_pairs_shortest_path.c:37:13: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     vertex_b=dynamic_malloc_array(n,n);
             ^
faster_all_pairs_shortest_path.c:40:13: error: ‘j’ undeclared (first use in this function)
         for(j=0;j<n;j++)
             ^
faster_all_pairs_shortest_path.c:42:14: error: ‘vetex_a’ undeclared (first use in this function)
              vetex_a[i][j]=vertex_adj[i][j];
              ^~~~~~~
faster_all_pairs_shortest_path.c:49:13: error: too few arguments to function ‘extend_short_path’
             extend_short_path(vertex_a,vertex_b,vertex_adj);
             ^~~~~~~~~~~~~~~~~
faster_all_pairs_shortest_path.c:10:13: note: declared here
 static void extend_short_path(int** vertex,int** vertex_before,int** vertex_adj,int n)
             ^~~~~~~~~~~~~~~~~
faster_all_pairs_shortest_path.c:53:13: warning: implicit declaration of function ‘exten_short_path’ [-Wimplicit-function-declaration]
             exten_short_path(vertex_b,vertex_a,vertex_adj);
             ^~~~~~~~~~~~~~~~
faster_all_pairs_shortest_path.c:58:9: warning: implicit declaration of function ‘free_array’ [-Wimplicit-function-declaration]
         free_array(vertex_a);
         ^~~~~~~~~~
faster_all_pairs_shortest_path.c:59:16: warning: ‘return’ with a value, in function returning void
         return vertex_b;
                ^~~~~~~~
faster_all_pairs_shortest_path.c:31:6: note: declared here
 void faster_all_pairs_shortest_path(int** vertex_adj,int n)
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
faster_all_pairs_shortest_path.c:63:20: error: ‘vertexb’ undeclared (first use in this function)
         free_array(vertexb);
                    ^~~~~~~
faster_all_pairs_shortest_path.c:64:16: warning: ‘return’ with a value, in function returning void
         return vertex_a;
                ^~~~~~~~
faster_all_pairs_shortest_path.c:31:6: note: declared here
 void faster_all_pairs_shortest_path(int** vertex_adj,int n)
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
faster_all_pairs_shortest_path.c: In function ‘main’:
faster_all_pairs_shortest_path.c:72:16: warning: implicit declaration of function ‘create_graph’ [-Wimplicit-function-declaration]
     vertex_adj=create_graph(5);
                ^~~~~~~~~~~~
faster_all_pairs_shortest_path.c:72:15: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     vertex_adj=create_graph(5);
               ^
faster_all_pairs_shortest_path.c:73:11: error: void value not ignored as it ought to be
     vertex=faster_all_pairs_shortest_path(vertex_adj,5);
           ^
faster_all_pairs_shortest_path.c:74:15: error: ‘n’ undeclared (first use in this function)
     for(i=0;i<n;i++)
               ^
faster_all_pairs_shortest_path.c:78:13: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]
             printf("%d ",vertex[i][j]);
             ^~~~~~
faster_all_pairs_shortest_path.c:78:13: warning: incompatible implicit declaration of built-in function ‘printf’
faster_all_pairs_shortest_path.c:78:13: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
faster_all_pairs_shortest_path.c:80:9: warning: incompatible implicit declaration of built-in function ‘printf’
         printf("\n");
         ^~~~~~
faster_all_pairs_shortest_path.c:80:9: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
faster_all_pairs_shortest_path.c:82:5: warning: incompatible implicit declaration of built-in function ‘printf’
     printf("\n");
     ^~~~~~
faster_all_pairs_shortest_path.c:82:5: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
make: *** [faster_all_pairs_shortest_path.o] Error 1
